public/css/business/landing/responsive.css
    @media only screen and (max-width : 1200px) {
        #banner h1 {
            font-size: 26px;
            line-height: 44px;
        }
        #phone {
            background: url("../../../images/business/landing/featherq-on-mobile-md.png") bottom right no-repeat;
        }
    }

    @media only screen and (max-width : 992px) {
        .nav>li>a {
            padding-left: 10px;
            padding-right: 10px;
        }
        #phone { background: none;}
        #phone p {
            font-size: 34px;
            line-height: 55px;
        }
        #banner .btn {
            font-size: 16px;
        }
        #banner #start {
            margin-left:0px;
            margin-bottom:0px;
        }
        #banner h1 {
            margin-bottom: 40px;
        }
        #banner {
            height: 740px;
        }
        #who-uses h5 {margin-bottom: 60px;}
    }

    @media only screen and (max-width : 768px) {
        #featherq-works img {
            width: 400px;
        }
        #featherq-works img, #benefits img {
            width: 350px;
        }
        #featherq-works p {
            font-size: 16px;
            margin-bottom: 60px;
        }
    }

    @media only screen and (max-width : 480px) {
        #featherq-works img {
            width: 300px;
        }
        #featherq-works img, #benefits img {
            width: 300px;
        }
        #phone p {
            font-size: 30px;
            line-height: 50px;
        }
        #banner p {
            margin-bottom: 30px;
        }
        #banner h1 {
            font-size: 23px;
            line-height: 38px;
        }
        #banner {
            height: 780px;
        }
    }

    @media only screen and (max-width : 320px) {
        #featherq-works img {
            width: 280px;
        }
        #featherq-works img, #benefits img {
            width: 100%;
            margin-left: 20px;
            margin-right: 20px;
        }
    }

